feat/custom-button-added

--- a/src/constants/colors.scss
+++ b/src/constants/colors.scss
@@ -8,8 +8,15 @@ $accent-color-7: #0077b6;
 $accent-color-8: #023e8a;
 $accent-color-9: #03045e;
 
+$gray-color-0: #f8f8f8;
 $gray-color-1: #e3e3e3;
 $gray-color-2: #c4c4c4;
 $gray-color-3: #878787;
 $gray-color-4: #575757;
 $gray-color-5: #3b3b3b;
+
+$red-color-1: #ff3d3d;
+$red-color-2: #fc2626;
+$red-color-3: #cd1818;
+$red-color-4: #ab1313;
+$red-color-5: #870f0f;
