--- a/src/constants/colors.scss
+++ b/src/constants/colors.scss
@@ -5,6 +5,7 @@ $accent-color-4: #48cae4;
 $accent-color-5: #00b4d8;
 $accent-color-6: #0096c7;
 $accent-color-7: #0077b6;
+$accent-color-75: #0456bf;
 $accent-color-8: #023e8a;
 $accent-color-9: #03045e;
 
