--- a/src/components/basic/CButton/CButton.module.scss
+++ b/src/components/basic/CButton/CButton.module.scss
@@ -1,6 +1,6 @@
-@use '../../constants/colors';
-@use '../../constants/variables';
-@use '../../constants/animations';
+@use '../../../constants/colors';
+@use '../../../constants/variables';
+@use '../../../constants/animations';
 
 button {
   background-color: transparent;
@@ -56,6 +56,18 @@ button {
       background-color: colors.$red-color-4;
     }
   }
+
+  &:disabled {
+    background-color: colors.$gray-color-2;
+    color: colors.$gray-color-3;
+
+    &:active {
+      &::after {
+        height: 0;
+        width: 0;
+      }
+    }
+  }
 }
 
 .button-outlined {
@@ -77,6 +89,18 @@ button {
       color: colors.$red-color-4;
     }
   }
+
+  &:disabled {
+    border-color: colors.$gray-color-2;
+    color: colors.$gray-color-2;
+
+    &:active {
+      &::after {
+        height: 0;
+        width: 0;
+      }
+    }
+  }
 }
 
 .button-transparent {
@@ -91,6 +115,17 @@ button {
 
     &:hover {
       color: colors.$red-color-4;
+    }
+  }
+
+  &:disabled {
+    color: colors.$gray-color-2;
+
+    &:active {
+      &::after {
+        height: 0;
+        width: 0;
+      }
     }
   }
 }
