feat/added-some-variables

--- a/src/constants/variables.scss
+++ b/src/constants/variables.scss
@@ -11,3 +11,12 @@ $border-radius-2: 10px;
 $border-radius-3: 15px;
 $border-radius-4: 20px;
 $border-radius-5: 25px;
+
+$padding-0: 0;
+$padding-1: 5px;
+$padding-2: 10px;
+$padding-3: 15px;
+$padding-4: 20px;
+$padding-5: 25px;
+
+$loader-size: 200px;
