--- a/src/components/basic/CInput/CInput.module.scss
+++ b/src/components/basic/CInput/CInput.module.scss
@@ -23,6 +23,10 @@ input {
   transition: 150ms cubic-bezier(0, 0, 0.2, 1) 0ms;
 }
 
+input::placeholder {
+  color: transparent;
+}
+
 .has-text {
   input {
     border-bottom: 2px solid colors.$accent-color-7;
