--- a/src/components/basic/Loader/Loader.module.scss
+++ b/src/components/basic/Loader/Loader.module.scss
@@ -14,6 +14,7 @@
 .container {
   align-items: center;
   background-color: colors.$accent-color-2;
+  border: 2px solid colors.$accent-color-8;
   color: colors.$accent-color-8;
   display: grid;
   grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr;
@@ -78,6 +79,6 @@
   }
 
   25% {
-    color: rgb(colors.$accent-color-8 0);
+    color: rgb(colors.$accent-color-8 0.2);
   }
 }
