--- a/src/components/basic/Loader/Loader.module.scss
+++ b/src/components/basic/Loader/Loader.module.scss
@@ -4,7 +4,7 @@
 
 .overlay {
   align-items: center;
-  background-color: rgb(colors.$accent-color-6 0.1);
+  background-color: rgba(colors.$accent-color-6 0.1);
   display: flex;
   height: 100vh;
   justify-content: center;
@@ -75,10 +75,10 @@
   0%,
   50%,
   100% {
-    color: rgb(colors.$accent-color-8 1);
+    color: rgba(colors.$accent-color-8 1);
   }
 
   25% {
-    color: rgb(colors.$accent-color-8 0.2);
+    color: rgba(colors.$accent-color-8 0.2);
   }
 }
