--- a/src/components/basic/CInput/CInput.module.scss
+++ b/src/components/basic/CInput/CInput.module.scss
@@ -6,6 +6,7 @@ label {
   font-size: 1em;
   left: 0.1em;
   position: absolute;
+  top: 0.11em;
   transform: translate(0, 1.4em) scale(1);
   transform-origin: top left;
   transition: 150ms cubic-bezier(0, 0, 0.2, 1) 0ms;
@@ -34,6 +35,7 @@ input::placeholder {
 
   label {
     color: colors.$accent-color-7;
+    top: 0;
     transform: translate(0, 0.4em) scale(0.75);
   }
 }
