refactor/fixed-text-selection

--- a/src/components/basic/Loader/Loader.module.scss
+++ b/src/components/basic/Loader/Loader.module.scss
@@ -19,6 +19,7 @@
   display: grid;
   grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr;
   justify-content: center;
+  user-select: none;
   width: max-content;
 
   * {
